2004-07-30  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure:
	* unix/tcl.m4 (SC_CONFIG_CFLAGS): Darwin: instead of setting PLAT_OBJS 
	to explict object files in tcl.m4, refer to MAC_OSX_OBJS makefile var.

2004-07-29  Don Porter	<dgp@users.sourceforge.net>

	*** 8.4.7 TAGGED FOR RELEASE ***

	* changes:
	* generic/tkEvent.c (Tk_HandleEvent): revert the 2004-07-20 commit.
	That commit created a new Bug 1000051 - a broken Compose Key.
	This revert restores Bug 905830 until a cleaner fix can be provided.

2004-07-27  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkImgGIF.c (FileReadGIF): fix crash reported by Reinhard Max:
	in case of premature end of image data, return error instead of
	passing nil buffer to Tk_PhotoPutBlock().

	* generic/tkRectOval.c (ComputeRectOvalBbox): Mac OS X specific
	fix to rounding in bounding box 'bloat' calculation to avoid drawing
	outside of bounding box when CG drawing enabled. Fix probably
	correct on other platforms as well?
	
	* macosx/tkMacOSXDraw.c (TkMacOSXInitCGDrawing): fixed LinkVar type
	for tkMacOSXCGAntiAliasLimit.

2004-07-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes:	Updated for Tcl 8.4.7 release.

2004-07-24  Jim Ingham  <jingham@apple.com>

	* macosx/tkMacOSXDefault.h: Change the default -tearoff value
	to 0.  It doesn't work at present, so it is silly to make
	it the default.
	
	Mac OS X: Complete the implementation of the CG version of
	the X drawing emulation layer.
	
	This was mostly done by James Tittle (tigital<at>mac<dot>com), 
	with a little help from me.

	* macosx/tkMacOSXint.h: Add declaration of TkMacOSXInitCGDrawing.
	* macosx/tkMacOSXInit.c: Call it.
	* macosx/tkMacOSXDraw.c (TkMacOSXInitCGDrawing): New function
	set up the variables controlling the use of cg drawing.
	(XFillRectangles): Make the CG branch work.
	(XDrawLines): Ditto
	(XDrawSegments): Ditto
	(XFillPolygon): Ditto
	(XDrawRectangle): Ditto
	(XDrawRectangles): Ditto
	(XDrawArc): Ditto
	(XDrawArcs): Ditto